# floating-aces

./: .gitignore  README.org  default.nix  deps.edn  floating-aces.cabal  floating-aces.el  shell.nix
app/: .dir-locals.el  Main.hs
specs/floating_aces/: core.clj
src/: .dir-locals.el  FloatingAces.hs  Prelude.hs  Utils.hs  user.clj
src/FloatingAces/: Parse.hs  Parser.hs  Render.hs  Type.hs
src/floating_aces/: #example.clj#  core.clj  example.clj  render.clj
