cabal-version:       >=1.10

name:                floating-aces
version:             0.1.0.0
license-file:        LICENSE
author:              Cameron Kingsbury
maintainer:          camsbury7@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Prelude
                     , FloatingAces
  other-modules:       FloatingAces.Type
                     , FloatingAces.Parser
  default-extensions:  NoImplicitPrelude
                       DerivingStrategies
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       OverloadedLists
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       MultiParamTypeClasses
                       FunctionalDependencies
  build-depends:       base-noprelude >=4.11
                     , classy-prelude
                     , attoparsec
                     , directory
                     , lens
                     , mtl
                     , uuid
                     , vector

executable             floating-aces
  main-is:             Main.hs
  hs-source-dirs:      app
  default-extensions:  NoImplicitPrelude
                       OverloadedLists
                       OverloadedStrings
  build-depends:       base-noprelude >=4.11
                     , classy-prelude
                     , bytestring
                     , directory
                     , floating-aces
                     , mtl
                     , network
  default-language:    Haskell2010